--- a/package.json
+++ b/package.json
@@ -2,8 +2,22 @@
   "name": "serverless-nodejs-api",
   "version": "1.0.0",
   "description": "",
+  "scripts": {
+    "dev": "serverless offline --stage dev",
+    "deploy": "serverless deploy --stage prod --region us-east-2",
+    "remove": "serverless remove --stage prod --region us-east-2"
+  },
   "dependencies": {
+    "@neondatabase/serverless": "^0.10.4",
+    "drizzle-orm": "^0.38.2",
     "express": "^4.19.2",
     "serverless-http": "^3.2.0"
+  },
+  "devDependencies": {
+    "@types/pg": "^8.11.10",
+    "drizzle-kit": "^0.30.1",
+    "serverless-dotenv-plugin": "^6.0.0",
+    "serverless-offline": "^14.4.0",
+    "serverless-plugin-include-dependencies": "^6.1.1"
   }
 }
