--- a/serverless.yml
+++ b/serverless.yml
@@ -11,7 +11,7 @@ provider:
   runtime: nodejs22.x
   environment:
     DEBUG: ${env:DEBUG, 0}
-    DATABASE_URL: ${env:DATABASE_URL, "fallback value"}
+    DATABASE_URL: ${env:DATABASE_URL}
 
 functions:
   api:
