--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "scripts": {
     "dev": "serverless offline --stage dev",
+    "info": "serverless info --stage prod --region us-east-2",
     "deploy": "serverless deploy --stage prod --region us-east-2",
     "remove": "serverless remove --stage prod --region us-east-2"
   },
   "dependencies": {
+    "@aws-sdk/client-ssm": "^3.716.0",
     "@neondatabase/serverless": "^0.10.4",
-    "aws-sdk": "^2.1692.0",
     "drizzle-orm": "^0.38.2",
     "express": "^4.19.2",
     "serverless-http": "^3.2.0"
