--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "dev": "serverless offline --stage dev",
     "info": "serverless info --stage prod --region us-east-2",
     "deploy": "serverless deploy --stage prod --region us-east-2",
-    "remove": "serverless remove --stage prod --region us-east-2"
+    "remove": "serverless remove --stage prod --region us-east-2",
+    "generate": "drizzle-kit generate --config=drizzle.config.js"
   },
   "dependencies": {
     "@aws-sdk/client-ssm": "^3.716.0",
     "@neondatabase/serverless": "^0.10.4",
-    "drizzle-orm": "^0.38.2",
+    "drizzle-orm": "^0.38.3",
     "express": "^4.19.2",
     "serverless-http": "^3.2.0"
   },
