--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "info": "serverless info --stage prod --region us-east-2",
     "deploy": "serverless deploy --stage prod --region us-east-2",
     "remove": "serverless remove --stage prod --region us-east-2",
-    "generate": "drizzle-kit generate --config=drizzle.config.js"
+    "generate": "drizzle-kit generate --config=drizzle.config.js",
+    "migrate": "tsx src/cli/migrator.js"
   },
   "dependencies": {
     "@aws-sdk/client-ssm": "^3.716.0",
@@ -18,9 +19,11 @@
   },
   "devDependencies": {
     "@types/pg": "^8.11.10",
+    "dotenv": "^16.4.7",
     "drizzle-kit": "^0.30.1",
     "serverless-dotenv-plugin": "^6.0.0",
     "serverless-offline": "^14.4.0",
-    "serverless-plugin-include-dependencies": "^6.1.1"
+    "serverless-plugin-include-dependencies": "^6.1.1",
+    "tsx": "^4.19.2"
   }
 }
